<resources>
    <string name="app_name">CuriosityApp</string>
    <string name="navbar_title">Navbar</string>
    <string name="footer_def">Footer</string>
    <string name="AccediLabel">Accedi</string>
    <string name="RegistratiLabel">Registrati</string>
    <string name="no_image">placeholder</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="AvatarLabel">Avatar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carica_holder">Carica</string>
    <string name="username_label">Username</string>
    <string name="repeat_psw">Conferma la password</string>
    <string name="insertemail">Inserisci la tua mail per accedere</string>
    <string name="welcome">Hei Ciao</string>
    <string name="select_interest">Scegli una o più aree di interesse</string>
    <string name="save">Conferma</string>
    <string name="selectTimeSpan">Ogni quanto vuoi ricevere le notifiche? </string>
    <string name="selettore_di_orario_dalle_3_alle_6">Selettore di orario dalle 3 alle 6</string>
    <string name="next_page">next_page</string>
    <string name="Hello_user_placeholder">Ciao User</string>
    <string name="settings_button">settings_button</string>
    <string name="logout_button">logout_button</string>
    <string name="categoria">Categoria</string>
    <string name="description_placeholder">Lo sapevi che...</string>
    <string name="lo_sapevo">Lo sapevo</string>
    <string name="non_lo_sapevo">Non lo sapevo</string>
</resources>