<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_base"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        style="@style/BigTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/selectTimeSpan">

    </TextView>

    <com.google.android.material.slider.Slider
        android:id="@+id/hourSlider"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/selettore_di_orario_dalle_3_alle_6"
        android:minWidth="250dp"
        android:stepSize="1"
        android:value="3"
        android:valueFrom="3"
        android:valueTo="6"
        app:labelBehavior="visible"
        app:thumbColor="@color/thumbColor"
        app:tickColor="@color/thumbColor"
        app:tickRadiusActive="2dp"
        app:tickRadiusInactive="2dp"
        app:tickVisible="true"
        app:trackColorActive="@color/thumbColor"
        app:trackColorInactive="@color/progressSlider"
        app:trackHeight="8dp">

    </com.google.android.material.slider.Slider>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/save" />


</LinearLayout>
