<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_base"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/pfp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/CircleImage"
            app:srcCompat="@drawable/pfp_placeholder"
            app:strokeColor="@color/background_outline"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/pfp_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carica_holder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="username"
            android:hint="@string/username_label"
            android:inputType="text" />

        <TextView
            android:id="@+id/usernameerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/errorColor" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="emailAddress"
            android:hint="@string/emailLabel"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/mailerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/errorColor" />

    </LinearLayout>

    <TextView
        android:id="@+id/infoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/confirmationColor" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/RegistratiLabel" />

</LinearLayout>