<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_base"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/selector_selected"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/user_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hello_user_placeholder"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:baselineAligned="true"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:backgroundTint="@color/no_background"
                android:contentDescription="@string/settings_button"
                app:srcCompat="@drawable/ic_settings" />

            <ImageButton
                android:id="@+id/logout_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/no_background"
                android:contentDescription="@string/logout_button"
                app:srcCompat="@drawable/log_out" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>