<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_base"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/no_image"
        android:maxHeight="150dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LoginLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:paddingHorizontal="8dp"
                android:text="@string/AccediLabel"
                android:textColor="@color/text_disable"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/SignUpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="8dp"
                android:text="@string/RegistratiLabel"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_signup_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="175dp"
            android:paddingStart="15dp"
            android:paddingTop="50dp"
            android:paddingEnd="15dp"
            android:paddingBottom="25dp">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_image"
        android:maxHeight="150dp"
        android:paddingBottom="10dp"
        android:src="@drawable/prova"
        tools:ignore="ImageContrastCheck" />

</LinearLayout>

